# pilot-hdc-metadata-event-handler

./: .env.schema  .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  pyproject.toml
.github/workflows/: hdc-pipeline-lineage.yml  hdc-pipeline-metadata.yml
commons/: base_consumer.py  encoders.py
kafka_schemas/: dataset.activity.avsc  metadata.items.activity.avsc  metadata.items.avsc
lineage_event_handler/: .dockerignore  .env.schema  Dockerfile  __main__.py  config.py  consumer.py  logger.py  pyproject.toml
lineage_event_handler/atlas_entity/: metadata_items.json
metadata_event_handler/: Dockerfile  __main__.py  config.py  consumer.py  filtering.py  logger.py  main.py  pyproject.toml
metadata_event_handler/app/components/health/: __init__.py  views.py
metadata_event_handler/app/dependencies/: __init__.py  elasticsearch.py
metadata_event_handler/app/models/: base_models.py  models_bulk_index.py
metadata_event_handler/app/routers/: router_exceptions.py
metadata_event_handler/app/routers/v1/bulk_index/: crud.py  dependencies.py  utils.py  views.py
metadata_event_handler/clients/: elasticsearch.py
metadata_event_handler/models/: ESDatasetActivityModel.py  ESItemActivityModel.py  ESItemFacetModel.py  ESItemModel.py  __init__.py
metadata_event_handler/services/: metadata.py  project.py
tests/: conftest.py  test_bulk_index.py  test_consumer.py  test_filtering.py  test_metadata.py  test_project.py  test_utils.py
tests/client/: test_elasticsearch.py
tests/components/health/: test_views.py
tests/fixtures/: event.py  fake.py  filtering.py  main.py  router_utils.py
tests/fixtures/clients/: elasticsearch.py
tests/fixtures/services/: metadata.py  project.py
